--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
         <a href="#" class="btn btn-white btn-animated">subscribe</a>
       </div>
     </header>
+
+    <main class="main">
+      <section class="section-about">
+        <div class="u-text-align-center">
+          <h2 class="heading-secondary">Secondary-Section</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-2 u-text-align-center">
+            <h3 class="heading-thertiary">head-third</h3>
+            <p class="lorem">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi doloremque repellendus voluptatem molestias vero aspernatur ea ipsum laudantium
+              quam quidem blanditiis voluptatibus praesentium laborum nostrum pariatur nobis, deleniti magni minima.
+            </p>
+            <p class="lorem">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi doloremque repellendus voluptatem molestias vero aspernatur ea ipsum laudantium
+              quam quidem blanditiis voluptatibus praesentium laborum nostrum pariatur nobis, deleniti magni minima.
+            </p>
+            <a href="#" class="btn-text"> LearnMore &rarr; </a>
+          </div>
+          <div class="col-1-2 u-text-align-center"></div>
+        </div>
+      </section>
+    </main>
+
     <script src="https://kit.fontawesome.com/92265e088a.js" crossorigin="anonymous"></script>
   </body>
 </html>
