--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
             </p>
             <a href="#" class="btn-text"> LearnMore &rarr; </a>
           </div>
-          <div class="col-1-2 u-text-align-center"></div>
+          <div class="col-1-2 u-text-align-center">
+            <div class="composition">
+              <img
+                src="https://images.unsplash.com/photo-1658255324897-b9baad60acd2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw4fHx8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt="1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="https://images.unsplash.com/photo-1658275876886-374d94cd4563?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="https://images.unsplash.com/photo-1658195771962-93726079f35b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwzNHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                alt="3"
+                class="composition__photo composition__photo--p3"
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
