--- a/index.html
+++ b/index.html
@@ -62,6 +62,50 @@
           </div>
         </div>
       </section>
+      <div class="section-features">
+        <div class="row">
+          <div class="col-1-4">
+            <div class="feature-box">
+              <i class="fab fa-500px feature-box__icon"></i>
+              <h3 class="heading-thertiary">sectionFeaturesHead</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate, sint accusamus sapiente aliquam amet quam aspernatur vitae,
+                laborum debitis voluptatem dolorem quos quis maxime consequatur distinctio magni quasi corrupti.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-4">
+            <div class="feature-box">
+              <i class="fab fa-500px feature-box__icon"></i>
+              <h3 class="heading-thertiary">sectionFeaturesHead</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate, sint accusamus sapiente aliquam amet quam aspernatur vitae,
+                laborum debitis voluptatem dolorem quos quis maxime consequatur distinctio magni quasi corrupti.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-4">
+            <div class="feature-box">
+              <i class="fab fa-500px feature-box__icon"></i>
+              <h3 class="heading-thertiary">sectionFeaturesHead</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate, sint accusamus sapiente aliquam amet quam aspernatur vitae,
+                laborum debitis voluptatem dolorem quos quis maxime consequatur distinctio magni quasi corrupti.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-4">
+            <div class="feature-box">
+              <i class="fab fa-500px feature-box__icon"></i>
+              <h3 class="heading-thertiary">sectionFeaturesHead</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci cupiditate, sint accusamus sapiente aliquam amet quam aspernatur vitae,
+                laborum debitis voluptatem dolorem quos quis maxime consequatur distinctio magni quasi corrupti.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script src="https://kit.fontawesome.com/92265e088a.js" crossorigin="anonymous"></script>
