--- a/index.html
+++ b/index.html
@@ -106,6 +106,34 @@
           </div>
         </div>
       </div>
+      <section class="section-third">
+        <div class="u-text-align-center">
+          <h2 class="heading-secondary">most popular tour</h2>
+        </div>
+        <div class="row u-text-align-center">
+          <div class="col-1-3">
+            1
+            <div class="card">
+              <div class="card__side card__side--front">2112</div>
+              <div class="card__side card__side--back card__side--back-1">back</div>
+            </div>
+          </div>
+          <div class="col-1-3">
+            2
+            <div class="card">
+              <div class="card__side card__side--front">2112</div>
+              <div class="card__side card__side--back card__side--back-1">back</div>
+            </div>
+          </div>
+          <div class="col-1-3">
+            3
+            <div class="card">
+              <div class="card__side card__side--front">2112</div>
+              <div class="card__side card__side--back card__side--back-1">back</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://kit.fontawesome.com/92265e088a.js" crossorigin="anonymous"></script>
