--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
     </header>
 
-    <main class="main">
+    <main class="main u-margin-bottom-big">
       <section class="section-about">
         <div class="u-text-align-center">
           <h2 class="heading-secondary">Secondary-Section</h2>
@@ -127,7 +127,15 @@
                   </ul>
                 </div>
               </div>
-              <div class="card__side card__side--back card__side--back-1">back</div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__flex">
+                  <div class="card__box">
+                    <p class="card__price--only">only</p>
+                    <p class="card__price--value">300$</p>
+                    <a href="#" class="btn btn-white">now!!!</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-1-3">
@@ -146,7 +154,15 @@
                   </ul>
                 </div>
               </div>
-              <div class="card__side card__side--back card__side--back-1">back</div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__flex">
+                  <div class="card__box">
+                    <p class="card__price--only">only</p>
+                    <p class="card__price--value">300$</p>
+                    <a href="#" class="btn btn-white">now!!!</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-1-3">
@@ -165,7 +181,15 @@
                   </ul>
                 </div>
               </div>
-              <div class="card__side card__side--back card__side--back-1">back</div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__flex">
+                  <div class="card__box">
+                    <p class="card__price--only">only</p>
+                    <p class="card__price--value">300$</p>
+                    <a href="#" class="btn btn-white">now!!!</a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
