--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
       <section class="section-third">
         <div class="u-text-align-center">
-          <h2 class="heading-secondary">most popular tour</h2>
+          <h2 class="heading-secondary">tertiary-section</h2>
         </div>
         <div class="row u-text-align-center">
           <div class="col-1-3">
