--- a/index.html
+++ b/index.html
@@ -194,6 +194,30 @@
           </div>
         </div>
       </section>
+      <section class="section-video">
+        <div class="row">
+          <div class="u-text-align-center u-margin-top-big">
+            <h2 class="heading-secondary">video/image section</h2>
+            <div class="component image">
+              <figure class="image__shape">
+                <img
+                  class="image__image"
+                  src="https://images.unsplash.com/photo-1658786335136-0b3e83dcb63a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=60"
+                  alt="section-video-image"
+                />
+                <figcaption class="image__figcap">profileDog!!!!</figcaption>
+              </figure>
+              <div class="image__textContent">
+                <h2>title</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, aspernatur commodi. Laboriosam facilis sint et vitae minus eos eligendi
+                  quidem fugiat neque eveniet veritatis quos, sit dolorem earum soluta perspiciatis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://kit.fontawesome.com/92265e088a.js" crossorigin="anonymous"></script>
