--- a/index.html
+++ b/index.html
@@ -195,6 +195,13 @@
         </div>
       </section>
       <section class="section-video">
+        <video class="video" autoplay muted loop>
+          <source
+            src="https://storage.coverr.co/videos/zQDD1PU3HWBMBBJQHXQNqnCzGt4gQ2aa?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6Ijg3NjdFMzIzRjlGQzEzN0E4QTAyIiwiaWF0IjoxNjU5MzQ1ODAyfQ.TghqBEC3I4PI1IRYRCUZuzi3Bu0KdPVN5XlyuFy3f7A"
+            type="video/mp4"
+          />
+          안나오면 ㅎㅇ
+        </video>
         <div class="row">
           <div class="u-text-align-center u-margin-top-big">
             <h2 class="heading-secondary">video/image section</h2>
