--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
         </div>
         <div class="row">
           <div class="login">
-            <form action="#" class="login__form">
-              <div class="login__input">
-                <input id="id" type="text" />
+            <form action="#" class="form">
+              <div class="login__form u-margin-bottom-small">
+                <input id="id" class="login__input" type="text" />
                 <label for="id">id</label>
               </div>
-              <div class="login__input">
-                <input id="email" type="email" />
+              <div class="login__form">
+                <input id="email" class="login__input" type="email" />
                 <label for="email">email</label>
               </div>
             </form>
