--- a/index.html
+++ b/index.html
@@ -240,6 +240,12 @@
                 <input id="email" class="login__input" type="email" />
                 <label for="email">email</label>
               </div>
+              <div class="radio-form">
+                <input id="radio" type="radio" name="select" />
+                <label class="radio-label" for="radio">option1<span class="radio-button"></span></label>
+                <input id="radio" type="radio" name="select" />
+                <label class="radio-label" for="radio">option2<span class="radio-button"></span></label>
+              </div>
             </form>
           </div>
         </div>
