--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
                 <label for="email">email</label>
               </div>
               <div class="radio-form">
-                <input id="radio" type="radio" name="select" />
+                <input class="radio-input" id="radio" type="radio" name="select" />
                 <label class="radio-label" for="radio">option1<span class="radio-button"></span></label>
-                <input id="radio" type="radio" name="select" />
+                <input class="radio-input" id="radio" type="radio" name="select" />
                 <label class="radio-label" for="radio">option2<span class="radio-button"></span></label>
               </div>
             </form>
