[html]:nav markUp

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <div class="layout-navigation">
+      <div class="navigation__background"></div>
+      <input type="checkbox" class="navigation__checkbox" />
+      <label for="" class="navigation__label"></label>
+      <div class="navigation__nav">
+        <ul class="navigation__ul">
+          <li class="navigation__li"><a href="#" class="navigation__a">navMenuOne</a></li>
+          <li class="navigation__li"><a href="#" class="navigation__a">navMenuTwo</a></li>
+          <li class="navigation__li"><a href="#" class="navigation__a">navMenuThree</a></li>
+          <li class="navigation__li"><a href="#" class="navigation__a">navMenuFour</a></li>
+        </ul>
+      </div>
+    </div>
+
     <header class="header">
       <div class="logo-div"><i class="fab fa-500px"></i></div>
       <div class="header-description">
