[style]: add nav checkbox active animation

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   </head>
   <body>
     <div class="layout-navigation">
+      <input id="navCheck" type="checkbox" class="navigation__checkbox" />
+      <label for="navCheck" class="navigation__label"></label>
       <div class="navigation__background"></div>
-      <input type="checkbox" class="navigation__checkbox" />
-      <label for="" class="navigation__label"></label>
       <div class="navigation__nav">
         <ul class="navigation__ul">
           <li class="navigation__li"><a href="#" class="navigation__a">navMenuOne</a></li>
