--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <div class="layout-navigation">
       <input id="navCheck" type="checkbox" class="navigation__checkbox" />
-      <label for="navCheck" class="navigation__label"></label>
+      <label for="navCheck" class="navigation__label">
+        <span class="navigation__icon"></span>
+      </label>
       <div class="navigation__background"></div>
       <div class="navigation__nav">
         <ul class="navigation__ul">
