[html] img markup

--- a/index.html
+++ b/index.html
@@ -270,7 +270,10 @@
 
     <div class="modal">
       <div class="modal__content">
-        <div class="modal__left"></div>
+        <div class="modal__left">
+          <img src="./img/1.webp" />
+          <img src="./img/2.webp" />
+        </div>
         <div class="modal__right">
           <h2 class="heading-secondary">login-section</h2>
           <p class="modal__text">
